--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Construct</title>
-  <base href="https://piligrim25.github.io/piligrim25.github.io/">  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="styles.dc0177b706c5faa2198f.css"></head>
 <body>
   <app-root></app-root>
@@ -21,5 +22,5 @@
 
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.617ad2b346a67d9a8f82.js"></script><script type="text/javascript" src="main.c52f4a8cdb59fc846917.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.617ad2b346a67d9a8f82.js"></script><script type="text/javascript" src="main.f1265c7b236c88289f9b.js"></script></body>
 </html>
